Additional fix for MSKINS-40: googleSearch sometimes overflows left column
git-svn-id: https://svn.apache.org/repos/asf/maven/skins/trunk@1354676 13f79535-47bb-0310-9956-ffa450edef68

--- a/maven-fluido-skin/src/main/resources/css/maven-theme.css
+++ b/maven-fluido-skin/src/main/resources/css/maven-theme.css
@@ -42,7 +42,7 @@ li.none{list-style: none;}
 li.expanded{list-style-image: url('../images/expanded.png');}
 li.collapsed{list-style-image: url('../images/collapsed.png');}
 
-.search-query{background-image: url(http://www.google.com/cse/intl/en/images/google_custom_search_watermark.gif); background-attachment: initial; background-origin: initial; background-clip: initial; background-color: rgb(255, 255, 255); background-position: 0% 50%; background-repeat: no-repeat no-repeat; }
+.search-query{background-image: url(http://www.google.com/cse/intl/en/images/google_custom_search_watermark.gif); background-attachment: initial; background-origin: initial; background-clip: initial; background-color: rgb(255, 255, 255); background-position: 0% 50%; background-repeat: no-repeat no-repeat; width:95% }
 
 body.topBarEnabled{padding-top: 60px;}
 body.topBarDisabled{padding-top: 20px;}
